@@ -11,11 +11,10 @@
   margin-left: auto;
   margin-right: auto;
   padding: 0;
-  width: 96%;
 }
 
 .slick--thumbnail.slick--skin--asnavfor .slick-list {
-  margin: 0 -20px;
+  margin: 0 auto;
   padding: 30px 0;
 }
 
@@ -80,12 +79,4 @@
 .slick--thumbnail.slick--skin--asnavfor .slick__arrow .slick-disabled {
   pointer-events: none;
   opacity: 0;
-}
-
-.slick--thumbnail.slick--skin--asnavfor .slick__arrow .slick-prev {
-  left: -20px;
-}
-
-.slick--thumbnail.slick--skin--asnavfor .slick__arrow .slick-next {
-  right: -20px;
 }
